hacklipse-victim/logs/vulnerable.err.log
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
  File "/usr/local/bin/vulnerable-server.py", line 29
    html = """<html><head><title>Vulnerable Server</title></head><body>""" + \\
                                                                              ^
SyntaxError: unexpected character after line continuation character
